--- a/index.html
+++ b/index.html
@@ -4,11 +4,92 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our New Bangladesh</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
-    <header></header>
-    <main></main>
+<body class="fira-sans-normal">
+    <header>
+        <nav>
+            <h3>Bangladesh 2.0</h3>
+            <a href=""><button class="btn-primary">Sign In</button></a>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h3>Bangladesh 2.0</h3>
+                <h1>Idea , innovation ,<br>
+                    vision and challenges in <br> New Bangladesh.</h1>
+                <a href=""><button class="btn-primary">Explore New Bangladesh</button></a>
+            </div>
+            <img class="banner-pic" src="assets/hero.png" alt="">
+        </div>
+    </header>
+    <main>
+        <section>
+            <h2 class="pillars-title">Pillars of "Bangladesh 2.0"</h2>
+            <div class="pillars">
+                <div class="pillars-item">
+                    <img src="assets/card-icon.png" alt="">
+                    <h4 class="item-title">Innovation</h4>
+                    <p class="item-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                </div>
+                <div class="pillars-item">
+                    <img src="assets/card-icon.png" alt="">
+                    <h4 class="item-title">Sustainability</h4>
+                    <p class="item-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                </div>
+                <div class="pillars-item">
+                    <img src="assets/card-icon.png" alt="">
+                    <h4 class="item-title">Infrastructure</h4>
+                    <p class="item-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                </div>
+                <div class="pillars-item">
+                    <img src="assets/card-icon.png" alt="">
+                    <h4 class="item-title">Empowerment</h4>
+                    <p class="item-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                </div>
+            </div>
+
+        </section>
+        <section>
+            <h2 class="pillars-title">The Vision of Future</h2>
+            <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            <div class="pillars">
+                <div class="pillars-item">
+                    <img src="assets/card-icon.png" alt="">
+                    <h4 class="item-title">Digital Transformation</h4>
+                    <p class="item-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                    <a href=""><button>Learn More</button></a>
+                </div>
+                <div class="pillars-item">
+                    <img src="assets/card-icon.png" alt="">
+                    <h4 class="item-title">Green Energy</h4>
+                    <p class="item-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                    <a href=""><button>Learn More</button></a>
+                </div>
+                <div class="pillars-item">
+                    <img src="assets/card-icon.png" alt="">
+                    <h4 class="item-title">Modern Infrastructure</h4>
+                    <p class="item-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                    <a href=""><button>Learn More</button></a>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div>
+                <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas, ducimus labore sequi quos deserunt optio id repellendus tempora veniam amet porro corporis exercitationem numquam debitis culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit error ex sit, dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse, cumque, quam tenetur rem earum eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam architecto soluta necessitatibus vero?"</p>
+                <h3>Dr. Muhammad Yunus</h3>
+                <p>Chief Adviser of the People's Republic of Bangladesh</p>
+            </div>
+        </section>
+        <section class="option"> 
+              <h2>Your Opinion Matters</h2>
+              <form action="">
+                
+              </form>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
